prevent footer overflow on image pages by setting image container div height to 100%

--- a/pages/style.css
+++ b/pages/style.css
@@ -86,6 +86,8 @@ header {
 
 .image-box {
   /* height: 1300px; */
+  /* set div to whatever amount of space the images decide to spill with height = 100% */
+    height: 100%;
   /* margin-left: -30px; */
   padding-top: 8px;
   display: flex;
